[tool.poetry]
name = "pyhgvs-lite"
version = "0.1.0"
description = "A lightweight parser for HGVS names"
authors = ["Liang-Bo Wang <liang-bo.wang@wustl.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ccwang002/pyhgvs-lite"
repository = "https://github.com/ccwang002/pyhgvs-lite"
documentation = "https://github.com/ccwang002/pyhgvs-lite"
include = [
    "CHANGES.rst",
]

[tool.poetry.dependencies]
python = ">=3.6"
attrs = "^19.3.0"
lark-parser = "^0.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "~3.7"
mypy = "~0.770"
black = "^19.10b0"
isort = "~4.3"
sphinx = "~2.4"
sphinx-issues = "^1.2.0"
pre-commit = "~2.0"
importlib_metadata = {version = "^1.5.0", python = "<3.8"}

[tool.isort]
line_length = 90
atomic = true
include_trailing_comma = true
not_skip = "__init__.py"
balanced_wrapping = true
multi_line_output = 3
known_third_party = ["attr", "_pytest", "pytest", "typing_extensions"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
